--- a/themes/up-business-theme/layouts/partials/shared/header.html
+++ b/themes/up-business-theme/layouts/partials/shared/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light py-4">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="{{ .Site.BaseURL }}">
-      <span class="fs-3 fw-semibold text-uppercase text-primary">{{ .Site.Title }}</span>
+      <span class="fs-3 fw-semibold text-uppercase text-primary">{{ .Site.Params.Title }}</span>
       {{ partial "utilities/image.html" "images/logo.png" }}
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
