--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -18,7 +18,7 @@
             <div class="card-body text-center">
               {{ with .title }}<h2 class="card-title text-center text-primary pb-4"><b>{{ . }}</b></h2>{{ end }}
               {{ with .text }}<p class="card-text text-black-61 pb-4">{{ . }}</p>{{ end }}
-              {{ with .button }}<a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}</a>{{ end }}
+              {{ with .button }}<a class="btn btn-outline-primary px-4 fw-bold" href="{{ .url }}">{{ .label }}</a>{{ end }}
             </div>
           </div>
         </div>
