--- a/themes/up-business-theme/layouts/partials/sections/offer.html
+++ b/themes/up-business-theme/layouts/partials/sections/offer.html
@@ -30,36 +30,40 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-12 col-xl-6">
-        <div class="card bg-purple" style="border-radius: 25px; padding: 50px;">
+        <div class="card bg-purple" style="border-radius: 25px; padding: 25px;">
           <div class="card-body row justify-content-center text-center">
             {{ with .content.discountpre }}
-              <h1 class="fw-bold text-light">{{ . }}</h1>
+            <h1 class="fw-bold text-light">{{ . }}</h1>
             {{ end }}
             {{ with .content.discountval }}
-              <h1 class="fw-bold text-light">{{ . }}</h1>
+            <h1 class="fw-bold text-light">{{ . }}</h1>
             {{ end }}
             {{ with .content.priceold }}
-              <h2 class="text-light">de <s>{{ . }}</s> por apenas:</h2>
+            <h2 class="text-light">de <s>{{ . }}</s> por apenas:</h2>
             {{ end }}
             {{ with .content.pricenow }}
-              <h1 class="hero-title fw-bold display-1 text-primary text-center text-light pb-4">{{ . }}</h1>
+            <h1 class="hero-title fw-bold display-1 text-primary text-center text-light">{{ . }}</h1>
             {{ end }}
           </div>
-          <div class="row justify-content-center" style="margin-top: -25px;">
+          <div class="row justify-content-center">
             <div class="col-12 col-xl-10 text-center">
               {{ with .content.button }}
-              <a class="btn bg-green text-light px-2 my-1"
-                style="font-size: 32px; display: inline-flex; align-items: center;"
-                href="{{ .url }}"><b>{{
-                  .label }}</b></a>
+              <a class="btn bg-green text-light px-2 my-1 fw-bold"
+                style="font-size: 32px; display: inline-flex; align-items: center;" href="{{ .url }}">
+                {{ .label }}
+              </a>
               {{ end }}
-              {{ with .content.buttonpost1 }}
-                <span class="text-light">{{ . }}</span>
-              {{ end }}
-              <br>
-              {{ with .content.buttonpost2 }}
-                <span class="text-light">{{ . }}</span>
-            {{ end }}
+              <div class="row justify-content-center">
+                <div class="col-12 col-xl-10 text-center">
+                  {{ with .content.buttonpost1 }}
+                  <span class="text-light">{{ . }}</span>
+                  {{ end }}
+                  <br>
+                  {{ with .content.buttonpost2 }}
+                  <span class="text-light">{{ . }}</span>
+                  {{ end }}
+                </div>
+              </div>
             </div>
           </div>
         </div>
