--- a/themes/up-business-theme/layouts/index.html
+++ b/themes/up-business-theme/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{ with .Site.Data.home.hero }}{{ partial "sections/home-hero.html" . }}{{ end }}
+  {{ with .Site.Data.home.hero }}{{ partial "sections/hero.html" . }}{{ end }}
   {{ with .Site.Data.home.portfolio }}{{ partial "sections/portfolio.html" . }}{{ end }}
   {{ with .Site.Data.home.services }}{{ partial "sections/services.html" . }}{{ end }}
   {{ with .Site.Data.home.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}
