several layout improvements i.e backgrounds

--- a/themes/up-business-theme/layouts/cursos/single.html
+++ b/themes/up-business-theme/layouts/cursos/single.html
@@ -6,7 +6,7 @@
 
 {{ with .Site.Data.guardiao.problems }}{{ partial "sections/services.html" . }}{{ end }}
 
-{{ with .Site.Data.guardiao.hero2 }}{{ partial "sections/hero.html" . }}{{ end }}
+{{ with .Site.Data.guardiao.hero2 }}{{ partial "sections/hero-dark.html" . }}{{ end }}
 
 <section class="section cta py-5">
   <div class="container">
@@ -30,15 +30,14 @@
   </div>
 </section>
 
-
 {{ with .Site.Data.guardiao.features }}{{ partial "sections/services.html" . }}{{ end }}
 
 <section class="section cta py-5">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-xl-6">
+      <div class="col-12 col-xl-8">
         <h4 class="text-center">Este <b>NÃO É</b> mais um curso com falsas promessas de enriquecer por especulação ou
-          investir em algo milagroso, como tantos outros.<br><br>Em vez disso ...</h4>
+          investir em algo milagroso, como tantos outros.<br><br>Em vez disso ...<br><br></h4>
         <h2 class="text-center">O curso te dá uma método <b>técnico</b> para te <b>blindar de perder dinheiro a longo
             prazo</b>.
         </h2>
@@ -54,22 +53,40 @@
 <section class="section cta py-5">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-xl-6">
-        <h3 class="fs-1 fw-bold text-center text-primary pb-3 text-danger">Mas agora você pode estar pensando...</h3>
-        <div class="text-black-61" style="margin-top: 50px;">
-          <h4 class="fw-bold">- "Mas eu não sou bom com tecnologia."</h4>
-          <p>No curso eu pego a sua mão e ensino tudo <b>passo-a-passo</b>, além de explicar todos os conceitos de
+      <div class="col-12 col-xl-10">
+        <h3 class="fs-1 fw-bold text-center text-primary">Assista gratuitamente a uma prévia do curso!</h3>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<div class="container-xl py-5">
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+    <iframe src="https://www.youtube.com/embed/yWVHrMGU478?vq=hd1080" width="1920" height="1080"
+      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen
+      title="Apresentação do Curso no YouTube"></iframe>
+  </div>
+</div>
+
+<section class="section cta py-5 bg-purple">
+  <div class="container text-black-61 text-light">
+    <div class="row justify-content-center">
+      <div class="col-12 col-xl-12">
+        <h3 class="fs-1 fw-bold text-center text-primary pb-3 text-light">Mas agora você pode estar pensando...</h3>
+        <div class="" style="margin-top: 50px;">
+          <h4 class="fw-bold">❌ - "Mas eu não sou bom com tecnologia."</h4>
+          <p>✅ No curso eu pego a sua mão e ensino tudo <b>passo-a-passo</b>, além de explicar todos os conceitos de
             maneira que mesmo iniciantes entendem</p>
-          <h4 class="fw-bold">- "Mas eu não tenho dinheiro para investir em criptomoedas."</h4>
-          <p>Um Bitcoin pode custar R$100.000, mas tu pode comprar uma fração dele, um pedacinho, equivalente ao valor
-            de um
-            lanche!</p>
-          <h4 class="fw-bold">- "Mas eu não tenho tanto dinheiro investido para me preocupar com segurança."</h4>
-          <p>Mesmo quando nosso dinhero é escasso temos que valoriza-lo e protege-lo muito, pois cada centavo perdido é
-            um
-            prejuizo imenso</p>
-          <h4 class="fw-bold">- "Mas eu não faço nada ilegal, não preciso me preocupar com privacidade."</h4>
-          <p>Privacidade é uma proteção fundamental. Se todos souberem quanto tu tem e tudo que tu faz, vão poder te
+          <br>
+          <h4 class="fw-bold">❌ - "Mas eu não tenho dinheiro para investir em criptomoedas."</h4>
+          <p>✅ Um Bitcoin pode custar R$100.000, mas tu pode comprar uma fração dele, um pedacinho, equivalente ao valor de um lanche!</p>
+          <br>
+          <h4 class="fw-bold">❌ - "Mas eu não tenho tanto dinheiro investido para me preocupar com segurança."</h4>
+          <p>✅ Mesmo quando nosso dinhero é escasso temos que valoriza-lo e protege-lo muito, pois cada centavo perdido é um prejuizo imenso</p>
+          <br>
+          <h4 class="fw-bold">❌ - "Mas eu não faço nada ilegal, não preciso me preocupar com privacidade."</h4>
+          <p>✅ Privacidade é uma proteção fundamental. Se todos souberem quanto tu tem e tudo que tu faz, vão poder te
             roubar, extorquir, manipular e censurar bem facilmente.</p>
         </div>
       </div>
@@ -85,20 +102,23 @@
 <section class="section cta py-5">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-xl-6">
-        <h3 class="fs-1 fw-bold text-center text-primary pb-3">Dúvidas Frequentes</h3>
+      <div class="col-12 col-xl-12">
+        <h3 class="fs-1 fw-bold text-center text-primary pb-3">Perguntas Frequentes</h3>
         <div class="text-black-61 pb-5" style="margin-top: 20px;">
           <h4 class="fw-bold">- "Por quanto tempo vou ter acesso ao curso?"</h4>
-          <p>Você tem um ano inteiro para acessar o Guardião Cripto, podendo assistir a cada uma das aulas quantas vezes
+          <p>Você tem um ano inteiro para acessar o Guardião Cripto, podendo assistir a cada uma das aulas quantas
+            vezes
             quiser.</p>
 
           <h4 class="fw-bold">- "Como vou acessar o curso?"</h4>
-          <p>O curso acontece na plataforma da Hotmart, acessível por qualquer dispositivo (computador, celular, tablet etc.). Você receberá um link de acesso imediatamente após efetuar a
+          <p>O curso acontece na plataforma da Hotmart, acessível por qualquer dispositivo (computador, celular,
+            tablet etc.). Você receberá um link de acesso imediatamente após efetuar a
             compra.
           </p>
 
           <h4 class="fw-bold">- "E se eu não gostar, posso cancelar a compra?</h4>
-          <p>Não se preocupe, você pode utilizar o recurso de reembolso da Hotmart em até 7 dias. Você pode testar o curso
+          <p>Não se preocupe, você pode utilizar o recurso de reembolso da Hotmart em até 7 dias. Você pode testar o
+            curso
             nesse período e, se sentir que não foi feito para você, é só acionar a garantia fácil da plataforma.</p>
         </div>
       </div>
