--- a/themes/up-business-theme/layouts/partials/sections/hero.html
+++ b/themes/up-business-theme/layouts/partials/sections/hero.html
@@ -15,7 +15,7 @@
         {{ end }}
         <div class="d-flex flex-column flex-xl-row">
           {{ with .content.buttonPrimary }}
-            <a class="btn btn-primary text-light px-4 my-1 fw-bold" href="{{ .url }}">{{ .label }}</a>
+            <a class="btn bg-green-grad text-light px-4 my-1 fw-bold fs-3" href="{{ .url }}">{{ .label }}</a>
           {{ end }}
           {{ with .content.buttonSecondary }}
             <a class="btn btn-outline-primary px-4 my-1 ms-xl-4 fw-bold" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
