--- a/themes/up-business-theme/layouts/partials/sections/offer.html
+++ b/themes/up-business-theme/layouts/partials/sections/offer.html
@@ -1,72 +1,71 @@
-<section class="section cta py-5">
+<section class="section hero cta portfolio py-5">
   <div class="container">
-    <div class="row justify-content-center">
-      <div
-        style="background-color: #f5f5f5; padding: 50px; padding-bottom: 100px; border-radius: 25px; max-width: 600px;">
+    <div class="row portfolio-feature">
+      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
         <div class="row justify-content-center">
           <div class="col-12">
             {{ with .content.title }}
-            <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
+            <h3 class="hero-title fs-1 fw-bold text-center text-primary pb-3">{{ . | markdownify }}</h3>
             {{ end }}
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-12 col-xl-12">
+        <div class="row justify-content-center px-5 pb-5">
+          <div class="col-12">
             {{ range .content.features }}
             {{ with .text }}
-            <h4 class="text-black-61">
-              <li>{{ . }}</li>
-            </h4>
+            <h3 class="text-black-61">✅ {{ . | markdownify }}</h3>
             {{ end }}
             {{ end }}
           </div>
         </div>
       </div>
-    </div>
-    <div class="row justify-content-center" style="margin-top: -50px;">
-      <div class="col-12 col-xl-6 text-center">
-        {{ with .content.image }}{{ partial "utilities/image-fluid.html" . }}{{ end }}
+      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
+        {{ with .content.image }}
+        {{ partial "utilities/image-fluid.html" . }}
+        {{ end }}
       </div>
     </div>
+  </div>
+  <div class="container"
+    style="background-image: linear-gradient(to bottom right, #000940, #3c00ff); border-radius: 25px; padding: 25px; ">
     <div class="row justify-content-center">
-      <div class="col-12 col-xl-6">
-        <div class="card bg-purple" style="border-radius: 25px; padding: 25px;">
-          <div class="card-body row justify-content-center text-center">
-            {{ with .content.discountpre }}
-            <h1 class="fw-bold text-light">{{ . }}</h1>
+      <div class="col-12 col-xl-12">
+        <div class="row justify-content-center text-center">
+          {{ with .content.discountpre }}
+          <h1 class="fw-bold text-light">{{ . }}</h1>
+          {{ end }}
+          {{ with .content.discountval }}
+          <h1 class="fw-bold text-light">{{ . }}</h1>
+          {{ end }}
+          {{ with .content.priceold }}
+          <h2 class="text-light">de <s>{{ . }}</s> por apenas:</h2>
+          {{ end }}
+          {{ with .content.pricenow }}
+          <h1 class="hero-title fw-bold display-1 text-primary text-center text-light">{{ . }}</h1>
+          {{ end }}
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-xl-12 text-center">
+            {{ with .content.button }}
+            <a class="btn btn-primary bg-green-grad text-light px-2 my-1 fw-bold fs-1"
+              style="display: inline-flex; align-items: center;" href="{{ .url }}">
+              {{ .label }}
+            </a>
             {{ end }}
-            {{ with .content.discountval }}
-            <h1 class="fw-bold text-light">{{ . }}</h1>
-            {{ end }}
-            {{ with .content.priceold }}
-            <h2 class="text-light">de <s>{{ . }}</s> por apenas:</h2>
-            {{ end }}
-            {{ with .content.pricenow }}
-            <h1 class="hero-title fw-bold display-1 text-primary text-center text-light">{{ . }}</h1>
-            {{ end }}
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-12 col-xl-10 text-center">
-              {{ with .content.button }}
-              <a class="btn bg-green text-light px-2 my-1 fw-bold"
-                style="font-size: 32px; display: inline-flex; align-items: center;" href="{{ .url }}">
-                {{ .label }}
-              </a>
-              {{ end }}
-              <div class="row justify-content-center">
-                <div class="col-12 col-xl-10 text-center">
-                  {{ with .content.buttonpost1 }}
-                  <span class="text-light">{{ . }}</span>
-                  {{ end }}
-                  <br>
-                  {{ with .content.buttonpost2 }}
-                  <span class="text-light">{{ . }}</span>
-                  {{ end }}
-                </div>
+            <div class="row justify-content-center">
+              <div class="col-12 col-xl-10 text-center">
+                {{ with .content.buttonpost1 }}
+                <span class="text-light">{{ . }}</span>
+                {{ end }}
+                <br>
+                {{ with .content.buttonpost2 }}
+                <span class="text-light">{{ . }}</span>
+                {{ end }}
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </section>
