--- a/themes/up-business-theme/layouts/partials/sections/testimonials.html
+++ b/themes/up-business-theme/layouts/partials/sections/testimonials.html
@@ -1,4 +1,4 @@
-<section class="section testimonials py-5">
+<section class="section testimonials py-5 bg-blue-16">
   <div class="container">
     <div class="row pb-5">
       <div class="col-12">
@@ -22,7 +22,7 @@
     <div class="row">
       {{ range $i, $e := .content.list }}
         <div class="col-12 col-xl-4">
-          <div class="card border-0 border-radius-34 p-4">
+          <div class="card border-0 border-radius-34 p-4 my-2">
             {{ with $e.image }}{{ partial "utilities/image-fluid.html" $e }}{{ end }}
             <div class="card-body">
               {{ $colors := (slice "bg-green" "bg-yellow" "bg-red" "bg-purple") }}
