--- a/themes/up-business-theme/layouts/cursos/single.html
+++ b/themes/up-business-theme/layouts/cursos/single.html
@@ -16,14 +16,13 @@
         <p class="text-center text-black-61">É para quem...</p>
         <div class="text-black-61">
           <ul>
-            <li>quer preservar seu dinheiro de inflação e impostos, ou;</li>
-            <li>ainda não tem criptomoedas, ou;</li>
-            <li>guarda criptomoedas na corretora, ou;</li>
-            <li>quer parar de correr riscos, ou;</li>
+            <li>quer preservar seu dinheiro de inflação e impostos;</li>
+            <li>ainda não tem criptomoedas;</li>
+            <li>guarda criptomoedas na corretora;</li>
+            <li>quer parar de correr riscos; ou</li>
             <li>quer garantir um futuro confortável e estável.</li>
           </ul>
-          <h4 class="text-center">Se encaixa em alguma dessas situações?<br>Então <b>você vai se beneficiar muito</b>
-            usando o método Guardião Cripto</h4>
+          <h4 class="text-center">Se você se encaixa em alguma dessas situações vai se beneficiar muito do método Guardião Cripto</h4>
         </div>
       </div>
     </div>
@@ -38,7 +37,7 @@
       <div class="col-12 col-xl-8">
         <h4 class="text-center">Este <b>NÃO É</b> mais um curso com falsas promessas de enriquecer por especulação ou
           investir em algo milagroso, como tantos outros.<br><br>Em vez disso ...<br><br></h4>
-        <h2 class="text-center">O curso te dá uma método <b>técnico</b> para te <b>blindar de perder dinheiro a longo
+        <h2 class="text-center">O curso te dá um método <b>técnico</b> para te <b>blindar de perder dinheiro a longo
             prazo</b>.
         </h2>
       </div>
@@ -77,13 +76,13 @@
         <div class="" style="margin-top: 50px;">
           <h4 class="fw-bold">❌ - "Mas eu não sou bom com tecnologia."</h4>
           <p>✅ No curso eu pego a sua mão e ensino tudo <b>passo-a-passo</b>, além de explicar todos os conceitos de
-            maneira que mesmo iniciantes entendem</p>
+            maneira que até mesmo iniciantes entendem.</p>
           <br>
           <h4 class="fw-bold">❌ - "Mas eu não tenho dinheiro para investir em criptomoedas."</h4>
           <p>✅ Um Bitcoin pode custar R$100.000, mas tu pode comprar uma fração dele, um pedacinho, equivalente ao valor de um lanche!</p>
           <br>
           <h4 class="fw-bold">❌ - "Mas eu não tenho tanto dinheiro investido para me preocupar com segurança."</h4>
-          <p>✅ Mesmo quando nosso dinhero é escasso temos que valoriza-lo e protege-lo muito, pois cada centavo perdido é um prejuizo imenso</p>
+          <p>✅ Mesmo quando nosso dinheiro é escasso, temos que valorizá-lo e protegê-lo muito, pois cada centavo perdido é um prejuízo imenso.</p>
           <br>
           <h4 class="fw-bold">❌ - "Mas eu não faço nada ilegal, não preciso me preocupar com privacidade."</h4>
           <p>✅ Privacidade é uma proteção fundamental. Se todos souberem quanto tu tem e tudo que tu faz, vão poder te
