--- a/themes/up-business-theme/layouts/partials/head/head.html
+++ b/themes/up-business-theme/layouts/partials/head/head.html
@@ -13,6 +13,15 @@
   <!-- SEO: Google Analytics -->
   {{ if hugo.IsProduction }}
     {{ partial "head/_seo.html" . }}
+    <!-- Global site tag (gtag.js) - Google Ads: 10967398952 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10967398952"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-10967398952');
+    </script>
   {{ end }}
 
   <!-- Stylesheets and Javascript -->
