--- a/themes/up-business-theme/layouts/partials/sections/testimonials.html
+++ b/themes/up-business-theme/layouts/partials/sections/testimonials.html
@@ -12,23 +12,31 @@
       <div class="col-12 col-xl-7 d-flex flex-column justify-content-center">
         <div class="pb-4">{{ partial "utilities/image-third.html" "images/testimonials-left-quote.png" }}</div>
         <div class="card d-flex flex-row align-items-start border-0 shadow p-5">
-          <div class="bg-green rounded-circle size-64 me-4"></div>
-          <p class="card-text text-black-61">"{{ .text }}" <span class="fw-bold text-primary">- {{ .client }}</span></p>
+          <div class="pe-4">
+            {{ with .image }}
+              {{ partial "utilities/image-third.html" . }}
+            {{ end }}
+          </div>
+          <p class="card-text text-black-61">"{{ .text }}"<br><span class="fw-bold text-primary">- {{ .client }}</span></p>
         </div>
-        <div class="pt-4 text-end">{{ partial "utilities/image-third.html" "images/testimonials-right-quote.png" }}</div>
+        <div class="p-4 text-end">{{ partial "utilities/image-third.html" "images/testimonials-right-quote.png" }}</div>
       </div>
       {{ end }}
     </div>
     <div class="row">
       {{ range $i, $e := .content.list }}
-        <div class="col-12 col-xl-4">
-          <div class="card border-0 border-radius-34 p-4 my-2">
-            {{ with $e.image }}{{ partial "utilities/image-fluid.html" $e }}{{ end }}
-            <div class="card-body">
-              {{ $colors := (slice "bg-green" "bg-yellow" "bg-red" "bg-purple") }}
-              <div class="{{ index $colors (mod $i 4) }} rounded-circle size-90 mb-4"></div>
-              <p class="card-text text-black-61">"{{ $e.text }}" <span class="fw-bold text-primary text-nowrap">- {{ $e.client }}</span></p>
+        <div class="col-12 col-xl-6">
+          <div class="card d-flex flex-row align-items-start border-0 shadow p-5 my-2">
+            
+            <div class="pe-4">
+              {{ if $e.image }}
+                {{ with $e.image }}{{ partial "utilities/image-third.html" . }}{{ end }}
+              {{ else }}
+                {{ $colors := (slice "bg-green" "bg-yellow" "bg-red" "bg-purple") }}
+                <div class="{{ index $colors (mod $i 4) }} rounded-circle size-90 mb-4"></div>
+              {{ end }}
             </div>
+            <p class="card-text text-black-61">"{{ $e.text }}"<br><span class="fw-bold text-primary">- {{ $e.client }}</span></p>
           </div>
         </div>
       {{ end }}
