minor layout imps, refactors

--- a/themes/up-business-theme/assets/scss/shared/_utilities.scss
+++ b/themes/up-business-theme/assets/scss/shared/_utilities.scss
@@ -65,6 +65,14 @@
   max-height: 90px;
 }
 
+.size-120 {
+  min-width: 120px;
+  max-width: 120px;
+
+  min-height: 120px;
+  max-height: 120px;
+}
+
 .aspect-ratio-62-5 {
   position: relative;
   width: 100%;
