--- a/themes/up-business-theme/layouts/partials/sections/portfolio.html
+++ b/themes/up-business-theme/layouts/partials/sections/portfolio.html
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
+      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center pb-5">
         {{ with .image }}
           {{ partial "utilities/image-fluid.html" . }}
         {{ end }}
