--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -10,9 +10,9 @@
         {{ end }}
       </div>
     </div>
-    <div class="row g-5">
+    <div class="row">
       {{ range .content.cards }}
-        <div class="col-12 col-xl-4">
+        <div class="col-12 col-xl-4 mb-4">
           <div class="card bg-blue-16 border-0 border-radius-34 p-4">
             {{ with .image }}{{ partial "utilities/image-fluid.html" . }}{{ end }}
             <div class="text-center">
