--- a/themes/up-business-theme/layouts/cursos/single.html
+++ b/themes/up-business-theme/layouts/cursos/single.html
@@ -26,6 +26,8 @@
 
 {{ with .Site.Data.guardiao.offer }}{{ partial "sections/offer.html" . }}{{ end }}
 
+{{ with .Site.Data.guardiao.warranty }}{{ partial "sections/portfolio.html" . }}{{ end }}
+
 {{ with .Site.Data.guardiao.faq }}{{ partial "sections/faq.html" . }}{{ end }}
 
 {{ end }}
