change course hero

--- a/themes/up-business-theme/assets/scss/shared/_bootstrap.scss
+++ b/themes/up-business-theme/assets/scss/shared/_bootstrap.scss
@@ -9,7 +9,7 @@ $font-family-base: "SF Pro Display";
 
 $primary: #000940;
 $secondary: #3c00ff;
-$danger: #ff0044;
+$danger: #f43724;
 $light: #ffffff;
 
 // scss-docs-start import-stack
