--- a/themes/up-business-theme/layouts/cursos/single.html
+++ b/themes/up-business-theme/layouts/cursos/single.html
@@ -2,6 +2,8 @@
 
 {{ with .Site.Data.guardiao.hero1 }}{{ partial "sections/hero.html" . }}{{ end }}
 
+{{ with .Site.Data.guardiao.dontlosemoney }}{{ partial "sections/headline.html" . }}{{ end }}
+
 {{ with .Site.Data.guardiao.portfolio }}{{ partial "sections/portfolio.html" . }}{{ end }}
 
 {{ with .Site.Data.guardiao.problems }}{{ partial "sections/services.html" . }}{{ end }}
