--- a/themes/up-business-theme/layouts/partials/sections/offer.html
+++ b/themes/up-business-theme/layouts/partials/sections/offer.html
@@ -12,9 +12,7 @@
         <div class="row justify-content-center px-5 pb-5">
           <div class="col-12">
             {{ range .content.features }}
-            {{ with .text }}
-            <h3 class="text-black-61">✅ {{ . | markdownify }}</h3>
-            {{ end }}
+            {{ with .text }}<h3 class="text-black-61">✅ {{ . | markdownify }}</h3>{{ end }}
             {{ end }}
           </div>
         </div>
@@ -31,23 +29,20 @@
     <div class="row justify-content-center">
       <div class="col-12 col-xl-12">
         <div class="row justify-content-center text-center">
-          {{ with .content.discountpre }}
-          <h1 class="fw-bold text-light">{{ . }}</h1>
+          {{ with .content.condition1 }}<h1 class="fw-bold text-light">{{ . }}</h1>{{ end }}
+          {{ with .content.condition2 }}<h1 class="fw-bold text-light">{{ . }}</h1>{{ end }}
+          {{ if .content.priceold }}
+          {{ with .content.priceold }}<h2 class="text-light">de <s>{{ . }}</s> por apenas</h2>{{ end }}
+          {{ else }}
+          <h2 class="text-light">por apenas</h2>
           {{ end }}
-          {{ with .content.discountval }}
-          <h1 class="fw-bold text-light">{{ . }}</h1>
-          {{ end }}
-          {{ with .content.priceold }}
-          <h2 class="text-light">de <s>{{ . }}</s> por apenas:</h2>
-          {{ end }}
-          {{ with .content.pricenow }}
-          <h1 class="hero-title fw-bold display-1 text-primary text-center text-light">{{ . }}</h1>
-          {{ end }}
+          {{ with .content.pricenow }}<h1 class="hero-title fw-bold display-1 text-primary text-center text-light">{{ .
+            }}</h1>{{ end }}
         </div>
         <div class="row justify-content-center">
           <div class="col-12 col-xl-12 text-center">
             {{ with .content.button }}
-            <a class="btn btn-primary bg-green-grad text-light px-2 my-1 fw-bold fs-1"
+            <a class="btn btn-primary bg-green-grad text-light px-3 my-1 fw-bold fs-1"
               style="display: inline-flex; align-items: center;" href="{{ .url }}">
               {{ .label }}
             </a>
