--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -1,9 +1,9 @@
-<section class="section services py-5">
+<section class="section hero services py-5">
   <div class="container">
     <div class="row justify-content-center pb-5">
       <div class="col-12 col-xl-6">
         {{ with .content.title }}
-          <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
+          <h3 class="hero-title fs-1 fw-bold text-center text-primary pb-3">{{ . | markdownify }}</h3>
         {{ end }}
         {{ with .content.text }}
           <p class="text-black-61 text-center pb-3">{{ . }}</p>
