--- a/themes/up-business-theme/layouts/partials/sections/triple-headline.html
+++ b/themes/up-business-theme/layouts/partials/sections/triple-headline.html
@@ -1,11 +1,11 @@
-<section class="section cta py-5">
+<section class="section hero pb-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-xl-8">
                 {{ with .content }}
-                <h4 class="text-center pb-3">{{ .first | markdownify }}</h4>
+                <h4 class="text-center hero-title pb-3">{{ .first | markdownify }}</h4>
                 <h4 class="text-center">{{ .second | markdownify }}<br><br></h4>
-                <h2 class="text-center">{{ .third | markdownify }}</h2>
+                <h3 class="hero-title fs-1 fw-bold text-center text-primary">{{ .third | markdownify }}</h2>
                 {{ end }}
             </div>
         </div>
