--- a/themes/up-business-theme/layouts/partials/sections/cta.html
+++ b/themes/up-business-theme/layouts/partials/sections/cta.html
@@ -14,9 +14,14 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-12 col-xl-6 text-center">
-        {{ with .content.button }}
-          <a class="btn btn-primary px-4 fw-bold" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
-        {{ end }}
+        <div class="d-flex flex-column flex-xl-row justify-content-center">
+          {{ with .content.button1 }}
+            <a class="btn bg-green-grad text-light px-4 my-1 fw-bold fs-3" href="{{ .url }}" style="width: auto;">{{ .label }}</a>
+          {{ end }}
+          {{ with .content.button2 }}
+            <a class="btn btn-outline-primary px-4 my-1 ms-xl-4 fw-bold fs-3" href="{{ .url }}" style="width: auto;">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
+          {{ end }}
+        </div>
       </div>
     </div>
   </div>
