--- a/themes/up-business-theme/layouts/partials/shared/footer.html
+++ b/themes/up-business-theme/layouts/partials/shared/footer.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row pb-5">
       <div class="col-12 col-xl-4 text-center text-xl-start pb-4">
-        <h4 class="fs-4 fw-semibold text-uppercase text-primary">{{ .Site.Title }}</h4>
-        <p class="small text-black-61">{{ .Site.Params.description }}</p>
+        <h4 class="fs-5 fw-semibold text-uppercase text-primary">{{ .Site.Title }}</h4>
+        <p class="fs-5 text-black-61">{{ .Site.Params.description }}</p>
         {{ with .Site.Params.social }}
         <ul class="d-flex justify-content-center justify-content-xl-start list-unstyled">
           {{ with .dribbble }}<li class="rounded-circle bg-blue-63 me-2 p-2"><a class="d-flex align-items-center justify-content-center size-16" href="{{ . }}">{{ partial "icons/dribbble.html" }}</a></li>{{ end }}
@@ -14,30 +14,30 @@
         {{ end }}
       </div>
       <div class="col-12 col-xl-2 text-center text-xl-start pb-4">
-        <h4 class="fs-4 fw-semibold text-primary">Sobre nós</h4>
+        <h4 class="fs-5 fw-semibold text-primary">Mapa do Site</h4>
         <ul class="list-unstyled">
           {{ range .Site.Menus.footer }}
             <li class="">
-              <a class="small text-black-61 text-decoration-none" href="{{ .URL }}">{{ .Name }}</a>
+              <a class="fs-5 text-black-61 text-decoration-none" href="{{ .URL }}">{{ .Name }}</a>
             </li>
           {{ end }}
         </ul>
       </div>
       <div class="col-12 col-xl-3 text-center text-xl-start pb-4">
-        <h5 class="fs-4 fw-semibold text-primary">Localização</h5>
+        <h5 class="fs-5 fw-semibold text-primary">Localização</h5>
         <ul class="list-unstyled">
           {{ range .Site.Params.location }}
             <li class="d-flex justify-content-center justify-content-xl-start mb-2">
               <div class="d-flex align-items-center text-primary">{{ partial "icons/geo-alt.html" }}</div>
-              <p class="small text-black-61 m-0 ps-2">{{ . }}</p>
+              <p class="fs-5 text-black-61 m-0 ps-2">{{ . }}</p>
             </li>
           {{ end }}
         </ul>
       </div>
       <div class="col-12 col-xl-3 text-center text-xl-start pb-4">
-        <h5 class="fs-4 fw-semibold text-primary">Contato</h5>
+        <h5 class="fs-5 fw-semibold text-primary">Contato</h5>
         {{ range .Site.Params.contact }}
-          <p class="small text-black-61 mb-1">{{ . }}</p>
+          <p class="fs-5 text-black-61 mb-1">{{ . }}</p>
         {{ end }}
       </div>
     </div>
