--- a/themes/up-business-theme/layouts/cursos/list.html
+++ b/themes/up-business-theme/layouts/cursos/list.html
@@ -1,39 +1,45 @@
-{{ define "main" }}
-  <section class="section blog-list py-5">
-    <div class="container">
-      <div class="row justify-content-center pb-5">
-        <div class="col-12 col-xl-6">
-          {{ with .Title }}
-            <h2 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
-          {{ end }}
-          {{ with .Params.description }}
-            <p class="text-black-61 text-center pb-3">{{ . }}</p>
-          {{ end }}
+<!DOCTYPE html>
+<html lang="en">
+  {{ partial "head/head.html" . }}
+  <body>
+    {{- partial "shared/header.html" . -}}
+    <section class="section blog-list py-5">
+      <div class="container">
+        <div class="row justify-content-center pb-5">
+          <div class="col-12 col-xl-6">
+            {{ with .Title }}
+              <h2 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
+            {{ end }}
+            {{ with .Params.description }}
+              <p class="text-black-61 text-center pb-3">{{ . }}</p>
+            {{ end }}
+          </div>
         </div>
-      </div>
-      <div class="row g-4 pb-5">
-        {{ range (.Paginate .RegularPages).Pages }}
-        <div class="col-12 col-md-6 col-lg-4">
-          <a class="card text-decoration-none h-100" href="{{ .Permalink }}">
-            <div class="aspect-ratio-62-5">
-              {{ with ( partial "utilities/get-featured-image.html" . ) }}
-                {{ partial "utilities/card-img-top" . }}
-              {{ end }}
-            </div>
-            <div class="card-body">
-              <h3 class="card-title fw-semibold">{{ .Title }}</h5>
-              <p class="card-text text-black-61">{{ .Summary | plainify }}</p>
-              <div class="d-flex flex-column">
-                <button class="btn btn-outline-primary fw-bold fs-5">Saiba mais</button>
+        <div class="row g-4 pb-5">
+          {{ range (.Paginate .RegularPages).Pages }}
+          <div class="col-12 col-md-6 col-lg-4">
+            <a class="card text-decoration-none h-100" href="{{ .Permalink }}">
+              <div class="aspect-ratio-62-5">
+                {{ with ( partial "utilities/get-featured-image.html" . ) }}
+                  {{ partial "utilities/card-img-top" . }}
+                {{ end }}
               </div>
-            </div>
-          </a>
+              <div class="card-body">
+                <h3 class="card-title fw-semibold">{{ .Title }}</h5>
+                <p class="card-text text-black-61">{{ .Summary | plainify }}</p>
+                <div class="d-flex flex-column">
+                  <button class="btn btn-outline-primary fw-bold fs-5">Saiba mais</button>
+                </div>
+              </div>
+            </a>
+          </div>
+          {{ end }}
         </div>
-        {{ end }}
+        <div class="row pb-5">
+          {{ template "_internal/pagination.html" . }}
+        </div>
       </div>
-      <div class="row pb-5">
-        {{ template "_internal/pagination.html" . }}
-      </div>
-    </div>
-  </section>
-{{ end }}
+    </section>
+    {{- partial "shared/footer.html" . -}}
+  </body>
+</html>
