--- a/themes/up-business-theme/layouts/partials/shared/footer.html
+++ b/themes/up-business-theme/layouts/partials/shared/footer.html
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="col-12">
         {{ with .Site.Params.copyright }}
-          <p class="small text-black-61 text-center">{{ . }}</p>
+          <p class="fs-5 text-black-61 text-center">{{ . }}</p>
         {{ end }}
       </div>
     </div>
