--- a/themes/up-business-theme/layouts/partials/sections/offer.html
+++ b/themes/up-business-theme/layouts/partials/sections/offer.html
@@ -1,5 +1,5 @@
 <section class="section hero cta portfolio py-5" id="{{ .id }}">
-  <div class="container">
+  <div class="container pt-5">
     <div class="row portfolio-feature">
       <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
         <div class="row justify-content-center">
