make fonts smaller

--- a/themes/up-business-theme/layouts/partials/sections/curriculum.html
+++ b/themes/up-business-theme/layouts/partials/sections/curriculum.html
@@ -14,9 +14,9 @@
           <ul>
             <li>Introdução ao Curso</li>
             <li>Aula 0 - Conceitos</li>
-            <li>Introdução ao Método 1 - Guardião Noviço</li>
-            <li>Aula 1 - Posse de Criptomoedas com o Celular</li>
-            <li>Aula 2 - Negociações de Criptomoedas</li>
+            <li>Introdução ao Método 1</li>
+            <li>Aula 1 - Criptomoedas no Celular</li>
+            <li>Aula 2 - Negociações de Criptos</li>
             <li>Checkpoint</li>
           </ul>
         </div>
@@ -41,8 +41,8 @@
             <li>Aula 11 - Carteiras de Hardware 1</li>
             <li>Aula 12 - Carteiras de Hardware 2</li>
             <li>Aula 13 - Múltiplas Assinaturas</li>
-            <li>Aula 14 - Melhorando Cópias de Restauração</li>
-            <li>Aula 15 - Resumo do Guardião Veterano</li>
+            <li>Aula 14 - Cópias de Restauração</li>
+            <li>Aula 15 - Resumo</li>
             <li>Aula 16 - Herança</li>
           </ul>
         </div>
