--- a/themes/up-business-theme/layouts/partials/sections/simple-header.html
+++ b/themes/up-business-theme/layouts/partials/sections/simple-header.html
@@ -1,10 +1,10 @@
-<nav class="sticky-top bg-purple py-3">
+<nav class="sticky-top bg-purple py-1">
   <div class="container">
     <div class="d-flex flex-row align-items-center justify-content-center">
       {{ with .content }}
           <span class="text-light fw-bold me-2 fs-6">{{ .headline }}</span>
         {{ with .button }}
-          <a class="btn bg-green-grad text-light px-3 ms-2 fw-bold fs-6" href="{{ .url }}">{{ .label }}</a>
+          <a class="btn bg-green-grad text-light px-2 ms-2 fw-bold small" href="{{ .url }}" style="line-height: 1;  padding-top: 0.123rem !important; padding-bottom: 0.125rem !important;">{{ .label }}</a>
         {{ end }}
       {{ end }}
     </div>
