--- a/themes/up-business-theme/layouts/partials/sections/testimonials.html
+++ b/themes/up-business-theme/layouts/partials/sections/testimonials.html
@@ -20,7 +20,7 @@
             {{ end }}
             <span class="card-text text-black-61 fw-bold text-primary">{{ .client }}</span>
           </div>
-          <p class="card-text fs-4 fw-semibold">"{{ .text }}"</p>
+          <p class="card-text text-black-61 fs-4 fw-semibold">"{{ .text }}"</p>
         </div>
         <div class="p-4 text-end">{{ partial "utilities/image-third.html" "images/testimonials-right-quote.png" }}</div>
       </div>
@@ -43,7 +43,7 @@
             {{ end }}
             <span class="card-text text-black-61 fw-bold text-primary">{{ $e.client }}</span>
           </div>
-          <p class="card-text text-black-61 fs-4">"{{ $e.text }}"</p>
+          <p class="card-text text-black-61">"{{ $e.text }}"</p>
         </div>
       </div>
       {{ end }}
